helm/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service  # Deve bater com o label do Pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080  # Deve bater com containerPort
